# tiny_os

./: .gitignore  Cargo.toml  build.rs  build_and_copy_user_programs.bat  project.sublime-project  project.sublime-workspace
.cargo/: config.toml
src/: interrupts.rs  lib.rs  main.rs  memory.rs
tiny_os/: Cargo.toml  tinyos_x64_target.json
tiny_os/tinyos_kernel/: Cargo.toml
tiny_os/tinyos_kernel/src/: allocator.rs  gdt.rs  interrupts.rs  main.rs  memory.rs  process.rs  rec_fib  shell  vga_buffer.rs
tinyos_kernel/: Cargo.toml  build.rs
tinyos_kernel/src/: allocator.rs  base.rs  gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  process.rs  processes.rs  serial.rs  simple_test  syscalls.rs
tinyos_userlib/: Cargo.toml
tinyos_userlib/src/: lib.rs  tinyos.rs
user_programs/: Cargo.toml  linker_script.ld  tinyos_x64_user_target.json  user_program1.rs
user_programs/.cargo/: config.toml
user_programs/src/: rec_fib.rs  shell.rs  simple_test.rs  tinyos_userlib.rs
